src/styles/global.css
:root {
  --black: #211f1e;
  --white: #ffffff;
  --white-alt: #e4d8de;
  --primary: #a71d5d;
  --primary-alt: #7d063d;
  --font-quote:  'DM Sans', serif;
  --font-meta: 'DM Sans', sans-serif;
}

* {
  box-sizing: border-box;
}

html,
.root {
  font-size: 17px;
}

body {
  background-color: var(--black);
  color: var(--white);
  font-family: var(--font-meta);
  font-size: 1em;
  margin-bottom: 75px;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
}

body, button {
  font-family: var(--font-meta);
}

a {
  color: var(--primary);
  text-decoration: none;
  font-weight: 700;
}
a:hover {
  color: var(--primary-alt);
}

cite {
  display: block;
  font-style: normal;
  margin-bottom: 1.618em;
  text-align: left;
}

cite > p {
  margin: 0;
}

cite > p:first-child {
  color: var(--white);
  font-weight: 700;
  margin-bottom: 6px;
}

blockquote {
  font-family: var(--font-quote);
  font-size: 1em;
  font-weight: 400;
  line-height: 1.75em;
  margin: 0.79310345em 0 0.79310345em 0;
}

blockquote > p {
  margin: 0 0 0.79310345em 0;
}

blockquote > div {
  margin: 0;
}

button {
  padding: 0;
}

.container {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-start;
  max-width: 700px;
  width: 96%;
  margin: 0 auto;
  padding-top: 1em;
}

.quotemark-l {
  color: var(--primary);
  font-size: 100px;
  text-align: center;
  line-height: 1;
}

nav {
  background-color: var(--black);
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  height: 55px;
  bottom: 0;
  border-top: 1px var(--white-alt) solid;
  align-items: center;
  justify-content: flex-start;
  transition: height 0.25s linear;
  padding-left: 2%;
}

nav.open {
  height: 100vh;
  overflow-y: scroll;
  padding-top: 1rem;
}

nav.open ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  height: 100%;
  max-width: 700px;
  width: 96%;
}

nav.open ul li {
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.quotee-select-button {
  font-size: 0.777rem;
  white-space: nowrap;
}

.open-button,
.close-button {
  position: absolute;
  right: 2%;
  font-size: calc(18 / 16 * 1rem);
}

.close-button {
  top: 8px;
}

.open-button {
  top: 50%;
  transform: translateY(-50%);
  display: none;
}

.playlist-button {
  font-size: 1rem;
  text-align: center;
  white-space: nowrap;
  padding: 0;
  margin: 0 4.5rem;
}

button {
  font-weight: bold;
  background-color: transparent;
  cursor: pointer;
  color: var(--white);
  border: none;
}

button:hover {
  color: var(--white-alt);
}

p.jumbo {
  font-size: 1.777rem;
  text-align: center;
}

.backward {
  display: inline-block;
  width: 0;
  height: 0;
  border-top: 10px solid transparent;
  border-right: 20px solid var(--white);
  border-bottom: 10px solid transparent;
}

.backward:hover {
  border-right-color: var(--white-alt);
}

.forward {
  display: inline-block;
  width: 0;
  height: 0;
  border-top: 10px solid transparent;
  border-left: 20px solid var(--white);
  border-bottom: 10px solid transparent;
}

.forward:hover {
  border-left-color: var(--white-alt);
}

.backward:hover,
.forward:hover {
  cursor: pointer;
}

.backward.disabled {
  border-right: 20px solid rgba(255, 255, 255, 0.5);
  cursor: default;
}

.forward.disabled {
  border-left: 20px solid rgba(255, 255, 255, 0.5);
  cursor: default;
}

.open-button,
.close-button {
  width: 1.5rem;
  height: 1.5rem;
}

@media (min-width: 650px) {
  .open-button,
  .close-button {
    right: 2vw;
  }

  .playlist-button {
    font-size: 1rem;
  }
}

@media (min-width: 450px) {
  nav {
    align-items: center;
    justify-content: center;
  }

  .playlist-button {
    font-size: 1rem;
  }

  .open-button {
    display: block;
  }
}

